--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>Destaque sua empresa na internet, leve-a para o proximo nivel, com os meus serviços de desenvolvimento web</p>
             <div class="home-content-text-btn">
                <a href="./cv/CV-Déleo Cambula.pdf" download><button class="btn-cv">Donwload Cv <i class="fa-solid fa-download"></i></button> </a>
-               <a href="#about-section"><button class="btn-about-me" >Sobre mim</button></a>
+               <a href="#sobre"><button class="btn-about-me" >Sobre mim</button></a>
             </div>
             <div class="home-content-text-icones">
                <a href="https://github.com/DeleoCambula"><i class="fa-brands fa-github"></i></a>
